removed the Untitled.ipynb file

--- a/mnm/Playground.ipynb
+++ b/mnm/Playground.ipynb
@@ -82,11 +82,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Getting Started with work"
+   ]
   }
  ],
  "metadata": {
@@ -100,12 +100,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": 3
+   "version": "3.7.4-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1594125840221",
-   "display_name": "Python 3.7.4 64-bit ('elsa-env': venv)"
+   "name": "mnm-env",
+   "display_name": "mnm-env"
   }
  },
  "nbformat": 4,
