--- a/mnm/Playground.ipynb
+++ b/mnm/Playground.ipynb
@@ -6,12 +6,12 @@
    "source": [
     "## Download the audio files\n",
     "\n",
-    "Script to download the audio files from the firestore storage"
+    "Script to download the audio files from the firestore storage. Form the already extracted texts"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,18 +19,30 @@
     "from pathlib import Path\n",
     "\n",
     "credentials_path = Path('../credentials/ServiceAccountKey.json')\n",
-    "audio_store_path = Path('../audio-data/')\n",
+    "audio_store_dir = Path('../audio-data/')\n",
+    "data_dir = Path('../data/')\n",
     "\n",
     "# check if the key exist\n",
     "assert credentials_path.exists(), \"The %s can't be found. It must be store in the %s\" % (credentials_path.name, credentials_path.parent)\n",
     "\n",
+    "# constants\n",
+    "# -----------------------------\n",
+    "\n",
+    "DATAPOINT_NAME = 'idata-a3aae'\n",
+    "BUCKET_NAME = '%s.appspot.com' % (DATAPOINT_NAME)\n",
+    "DATABASE_URL = 'https://%s.firebaseio.com' % (DATAPOINT_NAME)\n",
+    "\n",
+    "SERVICE_ACCOUNT_JSON = str(credentials_path)\n",
+    "\n",
+    "METADATA_CSV = str(data_dir.joinpath('metadata-40229.csv'))\n",
+    "\n",
     "# make the directory\n",
-    "audio_store_path.mkdir(parents=True, exist_ok=True)\n"
+    "audio_store_dir.mkdir(parents=True, exist_ok=True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,54 +51,56 @@
     "\n",
     "os.environ[\"GOOGLE_APPLICATION_CREDENTIALS\"] = str(credentials_path)\n",
     "\n",
-    "storage_client = storage.Client()\n",
-    "\n",
-    "BUCKET_NAME = 'idata-a3aae.appspot.com'\n",
-    "blobs = storage_client.list_blobs(BUCKET_NAME, prefix='speech/')"
+    "storage_client = storage.Client()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stderr",
-     "text": "0it [00:00, ?it/s]\n"
-    },
-    {
-     "output_type": "error",
-     "ename": "ValueError",
-     "evalue": "('Iterator has already started', <google.api_core.page_iterator.HTTPIterator object at 0x0000027060B0D8C8>)",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-4-52fa17f46a54>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mtqdm\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mtqdm\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0mblob\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mtqdm\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mblobs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m     \u001b[0mdestination_path\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0maudio_store_path\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjoinpath\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mblob\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[0mdestination_path\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mparent\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmkdir\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mparents\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mexist_ok\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\Users\\pyrja\\Documents\\_Nena\\elsa-voice-playground\\elsa-env\\lib\\site-packages\\tqdm\\std.py\u001b[0m in \u001b[0;36m__iter__\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   1127\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1128\u001b[0m         \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1129\u001b[1;33m             \u001b[1;32mfor\u001b[0m \u001b[0mobj\u001b[0m \u001b[1;32min\u001b[0m \u001b[0miterable\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1130\u001b[0m                 \u001b[1;32myield\u001b[0m \u001b[0mobj\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1131\u001b[0m                 \u001b[1;31m# Update and possibly print the progressbar.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\Users\\pyrja\\Documents\\_Nena\\elsa-voice-playground\\elsa-env\\lib\\site-packages\\google\\api_core\\page_iterator.py\u001b[0m in \u001b[0;36m__iter__\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    225\u001b[0m         \"\"\"\n\u001b[0;32m    226\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_started\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 227\u001b[1;33m             \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Iterator has already started\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    228\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_started\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mTrue\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    229\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_items_iter\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: ('Iterator has already started', <google.api_core.page_iterator.HTTPIterator object at 0x0000027060B0D8C8>)"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from tqdm import tqdm\n",
+    "import pandas as pd\n",
     "\n",
-    "for blob in tqdm(blobs):\n",
-    "    destination_path = audio_store_path.joinpath(blob.name)\n",
-    "    destination_path.parent.mkdir(parents=True, exist_ok=True)\n",
+    "# set to only download the audio from the listed files in the .csv file\n",
+    "# blobs = storage_client.list_blobs(BUCKET_NAME, prefix='speech/')\n",
     "\n",
-    "    blob.download_to_filename(str(destination_path))"
+    "md_df = pd.read_csv(METADATA_CSV, sep=',', header=0)\n",
+    "sample_audio_files_list = md_df['sound']\n",
+    "\n",
+    "sample_audio_files_list.shape"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
    "source": [
-    "## Getting Started with work"
+    "bucket = storage_client.bucket(BUCKET_NAME)\n",
+    "\n",
+    "destination_path = audio_store_path.joinpath('speech/')\n",
+    "destination_path.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "for _file in tqdm(sample_audio_files_list):\n",
+    "    to_save_path = destination_path.joinpath(_file)\n",
+    "\n",
+    "    # Skips if the file already exists\n",
+    "    if to_save_path.exists(): continue\n",
+    "\n",
+    "    blob = bucket.blob(_file)\n",
+    "    blob.download_to_filename(str(to_save_path))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -104,8 +118,8 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "mnm-env",
-   "display_name": "mnm-env"
+   "name": "python_defaultSpec_1594744173383",
+   "display_name": "Python 3.7.4 64-bit ('base': conda)"
   }
  },
  "nbformat": 4,
