--- a/Model_1.ipynb
+++ b/Model_1.ipynb
@@ -26,7 +26,7 @@
     "import torch.utils.data as data\n",
     "import torch.optim as optim\n",
     "import torch.nn.functional as F\n",
-    "import torchaudio#only on linux"
+    "import torchaudio #only on linux"
    ]
   },
   {
@@ -104,7 +104,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's load the data using librosa and place the np.arrays and sampling rates into lists since there's more than one audio file"
+    "Let's load the data using torchaudio and place the data tensors and sampling rates into lists since there's more than one audio file"
    ]
   },
   {
